; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_agg.c_build_aggregate_serialfn_expr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_agg.c_build_aggregate_serialfn_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTERNALOID = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@BYTEAOID = common dso_local global i32 0, align 4
@COERCE_EXPLICIT_CALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @build_aggregate_serialfn_expr(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %7 = load i32, i32* @INTERNALOID, align 4
  %8 = load i32, i32* @InvalidOid, align 4
  %9 = call i32 @make_agg_arg(i32 %7, i32 %8)
  %10 = call i32* @list_make1(i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @BYTEAOID, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @InvalidOid, align 4
  %15 = load i32, i32* @InvalidOid, align 4
  %16 = load i32, i32* @COERCE_EXPLICIT_CALL, align 4
  %17 = call i32* @makeFuncExpr(i32 %11, i32 %12, i32* %13, i32 %14, i32 %15, i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = load i32**, i32*** %4, align 8
  store i32* %18, i32** %19, align 8
  ret void
}

declare dso_local i32* @list_make1(i32) #1

declare dso_local i32 @make_agg_arg(i32, i32) #1

declare dso_local i32* @makeFuncExpr(i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
